fix + z-index

--- a/ckanext/who_afro/assets/css/who-afro.css
+++ b/ckanext/who_afro/assets/css/who-afro.css
@@ -297,7 +297,7 @@ p.small {
 .promoted-container {
     background-color: var(--primary-navy);
     position: relative;
-    z-index: 999;
+    z-index: 2;
 }
 
 #NavbarBrandingContainer {
